<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Common Costs Calculator</string>
    <string name="username">Felhasználónév</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="link_to_register">Még nincs fiókod?</string>
    <string name="link_to_login">Már van fiókod?</string>
    <string name="register">Regisztráció</string>
    <string name="email">E-mail cím</string>
    <string name="password_again">Jelszó újra</string>
    <string name="missed_data">Hiányzó adatok!</string>
    <string name="passwords_doesnt_match">A két jelszó nem egyezik!</string>
    <string name="registration_success">Sikeresen regisztráltál, mostmár beléphetsz az adataiddal.</string>
    <string name="wrong_username_or_email">Létező fiók!</string>
    <string name="wrong_username_or_password">Hibás felhasználónév vagy jelszó!</string>
    <string name="logout">Kijelentkezés</string>
    <string name="title_activity_project_details">Project Adatai</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_search">UserSearchActivity</string>
    <string name="user_search_hint">Felhasználónév vagy e-mail cím</string>
    <string name="user_search_button">Felhasználó keresése</string>
    <string name="title_activity_new_project">Új projekt létrehozása</string>
    <string name="active_projects">Aktív projektek</string>
    <string name="action_project_finish">Projekt lezárása</string>
    <string name="title_activity_project_view">Projekt megtekintése</string>
    <string name="participants">Aktív résztvevők:</string>
    <string name="first_name">Keresztnév</string>
    <string name="last_name">Vezetéknév</string>
    <string name="title_activity_add_item">Tétel hozzáadása</string>
    <string name="megnevezes">Elnevezés</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_add_text">Tétel hozzáadása</string>
    <string name="participant_add_text">Résztvevő hozzáadása</string>
    <string name="tetel_osszeg_editext">Összeg</string>
    <string name="title_activity_project_connect_refused">Meghívásaid</string>
    <string name="elutasitButton">Elutasít</string>
    <string name="action_invites">Meghívások</string>
    <string name="ItemsText">Tételek:</string>
    <string name="resztvevokText">Résztvevők</string>

</resources>
