<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/bg_login"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@color/white"/>
        <EditText
            android:id="@+id/username"
            android:layout_below="@+id/logo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:background="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textColor="@color/input_login"
            android:textColorHint="@color/input_login_hint" />
        <Button
            android:id="@+id/loginBTN"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:hint="@string/login"
            android:layout_margin="10dp"/>
    <Button
        android:id="@+id/linkToRegister"
        android:layout_below="@+id/loginBTN"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@null"
        android:text="@string/link_to_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15dp" />



</RelativeLayout>